Fixed a few typos that caused problems with generating the proof document.

--- a/document/root.tex
+++ b/document/root.tex
@@ -43,7 +43,7 @@
 
 \title{The Interchange Law in Application to Concurrent Programming\\---\\Mechanisation in Isabelle/HOL}
 
-\author{Tony Hoare \and Frank Zeyda \and Georg Struth}
+\author{Tony Hoare \and Bernard M\"{o}ller \and Georg Struth \and Frank Zeyda}
 
 %\date{Working note: 7 Feb, 2016.}
 
@@ -76,7 +76,16 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\input{Preliminaries}
+\newpage
+
 \input{Option_Monad}
+\newpage
+
+\input{Strict_Operators}
+\newpage
+
+\input{Machine_Number}
 \newpage
 
 \input{Overflow_Monad}
@@ -85,7 +94,10 @@
 \input{Strict_Operators}
 \newpage
 
-\input{ICL}
+\input{Partiality}
+\newpage
+
+\input{ICL_Examples}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
